--- a/profile.css
+++ b/profile.css
@@ -17,6 +17,7 @@ article{
   float: left;
 }
 
+
 #img_about{
   border-radius: 8px;
   width: 200px;
@@ -63,7 +64,7 @@ article{
   justify-content: left;
   flex-direction: column;
   align-items: flex-start;
-  overflow-y: scroll;
+  overflow-y: auto;
   align-self: flex-start;
 }
 
@@ -225,7 +226,7 @@ article{
     transform: translateY(0px);
   }
   to {
-    transform: translateY(-2000px);
+    transform: translateY(-3000px);
   }
 }
 
@@ -234,10 +235,12 @@ article{
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 50px;
+  width: 20px;
+  height: 15px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
+  border-radius: 50%;
 }
 
 .fa:hover {
